--- a/VolumeChangeBlocker/VolumeChangeBlocker.csproj
+++ b/VolumeChangeBlocker/VolumeChangeBlocker.csproj
@@ -8,6 +8,7 @@
         <UseWPF>true</UseWPF>
 		<UseWindowsForms>True</UseWindowsForms>
 		<ApplicationIcon>icon.ico</ApplicationIcon>
+		<AssemblyVersion>1.0.0.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
